# awstags

./: README.md  pyproject.toml
awstags/: awstags.py  res2csv.py  s3tags.py
tests/: test_awstags.py
