[tool.poetry]
name = "awstags"
version = "0.1.0"
description = ""
authors = ["David Schober <davidschob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
boto3 = "^1.16.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
res2csv = 'awstags.res2csv:main'
s3tags = 'awstags.s3tags:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

